# hyper-simulation

./: .gitignore  .gitmodules  GET_PATH_DESCRIPTION_IMPLEMENTATION.md  IMPLEMENTATION_CODE.md  NLI_TRUNCATION_IMPLEMENTATION.md  README.md  Scalability.md  TIME.md  check_arc.py  debug_counts.py  debug_within_group_path.py  find_missing.py  fix_arc.py  fix_arc2.py  fix_arc3.py  hyper_simulation.trace  pixi.toml  pyproject.toml  test_import.py  test_import_2.py  test_metrics.py  test_norm.py
.VSCodeCounter/2026-04-10_22-46-05/: details.md  diff-details.md  diff.md  results.csv  results.md
docs/: project.md  spacy.md
docs/guidance/: 2026-02-04.md  2026-02-05.md  2026-02-09.md  2026-03-12.md
docs/issue/: 2026-02-09.md  出现自环.md
docs/todo/: hypergraph.md
docs/update/: 2026-02-12.md
scripts/: base_line.sh  cdit.sh  generate_embs.sh  hypergragh.sh  save.sh
src/: ll.py
src/contrievers/: __init__.py  finetuning_data.py  index.py  utils.py
src/hyper_simulation/: query_instance.py
tests/: test_conceptnet.py  test_contradoc.py  test_db.py  test_dependency.py  test_dependency_batch.py  test_fishing.py  test_hypergrah_gen.py  test_hypergraph.py  test_llm.py  test_musique_base.py  test_simulation.py  test_tool.py
tests/tasks/: arc.py  arc_baseline.py  build_arc.py  build_by_token_len.py  build_contract_nli.py  build_control.py  build_docnli.py  build_econ.py  build_hotpotqa.py  build_legalbench.py  build_multihop.py  build_musique.backup  build_musique.py  by_token_len_simulation.py  check_decompose_structure.py  choose_prompt.py  contra_nli.py  contradoc_time.py  (+30 more)
(+84 files in other folders)
